Fixed image overflowing in image task editor

--- a/WebEntry/src/components/AssetEditorComponents/EditTaskComponent.css
+++ b/WebEntry/src/components/AssetEditorComponents/EditTaskComponent.css
@@ -7,7 +7,6 @@
 .editTaskFormButtons{
   width: 100%;
   height: 9%;
-  margin-top: 20px;
 }
 
 .questionTypeContainer{
@@ -31,4 +30,9 @@
 
 .formControl{
   width: 49.5%;
+}
+
+.editTaskContent{
+  display: flex;
+  flex-grow: 1;
 }
