--- a/WebEntry/src/components/AssetEditorComponents/TaskComponents/SelectImageComponent.css
+++ b/WebEntry/src/components/AssetEditorComponents/TaskComponents/SelectImageComponent.css
@@ -8,7 +8,11 @@
 
 .imageInputContainer{
   width: 100%;
-  /*height: 10%;*/
+}
+
+.editTaskImagePreview{
+  display: flex;
+  flex-grow: 1;
 }
 
 .imagePickingContainer{
